# phiacta-verify

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
containers/julia/: Dockerfile
containers/lean4/: Dockerfile
containers/python/: Dockerfile
containers/r/: Dockerfile
containers/symbolic/: Dockerfile
src/phiacta_verify/: config.py  main.py  worker.py
src/phiacta_verify/api/: __init__.py  health.py  jobs.py  router.py
src/phiacta_verify/comparators/: __init__.py  base.py  exact.py  image.py  numerical.py  statistical.py
src/phiacta_verify/models/: __init__.py  enums.py  job.py  result.py
src/phiacta_verify/phiacta_client/: __init__.py  client.py
src/phiacta_verify/queue/: __init__.py  redis_queue.py
src/phiacta_verify/runners/: __init__.py  base.py  julia_runner.py  lean_runner.py  python_runner.py  r_runner.py  symbolic_runner.py
src/phiacta_verify/sandbox/: __init__.py  container.py  security.py
src/phiacta_verify/signing/: __init__.py  ed25519.py
tests/: test_comparators.py  test_runners.py  test_sandbox.py  test_signing.py
